# countries-anki

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
data/: cities_overrides.yaml  flags_overrides.yaml  render_overrides.yaml  un_members.yaml
data/natural_earth/: README.md
src/deckbuilder/: __init__.py  __main__.py  anki.py  cities.py  city_selection.py  cli.py  config.py  countries.py  flags.py  inspect_report.py  io_ne.py  models.py  qa.py  render.py  render_overrides.py  util.py  validate.py
